--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,13 +3,14 @@ name: Deploy to Server
 on:
   push:
     branches:
-      [main]
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Deploy to server
+      - name: Deploy to server via SSH
         env:
           SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SERVER_HOST: ${{ secrets.SERVER_HOST }}
@@ -17,9 +18,15 @@ jobs:
         run: |
           echo "$SSH_KEY" > key.pem
           chmod 600 key.pem
-          ssh -i key.pem -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_HOST '
-          cd /home/ubuntu/server-1
-          git pull origin main
-          sudo docker-compose down
-          sudo docker-compose up --build -d
-          '
+
+          ssh -i key.pem -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_HOST << 'EOF'
+            set -e
+            cd /home/ubuntu/server-1
+            git pull origin main
+            if ! docker compose version >/dev/null 2>&1; then
+              sudo apt update
+              sudo apt install -y docker-compose-plugin
+            fi
+            docker compose down
+            docker compose up --build -d
+          EOF
