--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
             fi
 
             # Loyihaga o‘tish va yangilash
-            cd /home/ubuntu/aws-server-with-docker
+            cd /home/ubuntu/server-1
             git pull origin main
 
             # Docker konteynerlarni yangilash
