--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
 
             # Loyihaga o‘tish va yangilash
             cd /home/ubuntu/server-1
-            git pull origin main
+            git pull main
 
             # Docker konteynerlarni yangilash
             sudo docker-compose down
